charts/istio/authz/member/authorization-member.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: come2us-authenticated-access-member
  namespace: come2us
spec:
  selector:
    matchLabels:
      app: member-service
  action: ALLOW
  rules:
    - from:
        - source:
            requestPrincipals: ["*"]
      to:
        - operation:
            methods: ["GET", "PATCH"]
            paths:
              - /members/info     # 개인정보 열람 및 수정

    - to:
        - operation:
            methods: ["PATCH"]
            paths:
              - /members/password # 비밀번호 변경 요청

    - to:
        - operation:
            methods: ["DELETE"]
            paths:
              - /members          # 회원 탈퇴 요청
